# trackcomp

./: CMakeLists.txt
src/: CGpx.cpp  CGpx.h  CMainWidget.cpp  CMainWidget.h  CMakeLists.txt  CTrack.cpp  CTrack.h  IMainWidget.ui  main.cpp  resources.qrc
test/: reference_test3.gpx
test/test3/: Tracks.gpx
